# niffler

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  pixi.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  codspeed.yml  main.yml
benches/: benchmarks.rs  bzip2.rs  detect_format.rs  gzip.rs  json_parse.rs  lzma.rs  share.rs
examples/: stdin_pipe.rs
src/: compression.rs  error.rs  level.rs  lib.rs  types.rs  utils.rs
src/basic/: compression.rs  mod.rs
src/seek/: compression.rs  mod.rs
src/seeksend/: compression.rs  mod.rs
src/send/: compression.rs  mod.rs
tests/: stdin.rs
