[package]
name = "niffler"
version = "3.0.0"
authors = ["Pierre Marijon <pierre@marijon.fr>", "Luiz Irber <luiz.irber@gmail.com>"]
description = "Simple and transparent support for compressed files"
license = "MIT/Apache-2.0"
repository = "https://github.com/luizirber/niffler"
homepage = "https://github.com/luizirber/niffler"
readme = "README.md"
documentation = "https://docs.rs/niffler"
edition = "2021"
rust-version = "1.74"

[features]
default = [
    "bgz", "bgzip/default",
    "bz2", "bzip2/default", #for 0.5.0
    "gz", "flate2/default",
    "lzma", "xz", "liblzma/default",
    "zstd", "zstd/default"
]
bz2 = ["dep:bzip2"]
lzma = ["dep:liblzma"]
gz = ["dep:flate2"]
bgz = ["dep:bgzip"]
xz = ["lzma"]
zstd = ["dep:zstd"]
wasm = ["zstd", "lzma", "gz", "bgz"]

[dependencies]
cfg-if = "1.0"
thiserror = "2.0"
#bzip2 = { version = "0.4.4", optional = true, default-features = false }
bzip2 = { version = "0.5.0", optional = true, default-features = false }
flate2 = { version = "1.0", optional = true, default-features = false }
liblzma = { version = "0.3", optional = true, default-features = false }
bgzip = { version = "0.3", optional = true, default-features = false }
zstd = { version = "0.13", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3"
codspeed-criterion-compat = "2.7.2"

[[bench]]
name = "detect_format"
harness = false

[[bench]]
name = "gzip"
harness = false
required-features = ["gz"]

[[bench]]
name = "bzip2"
harness = false
required-features = ["bz2"]

[[bench]]
name = "lzma"
harness = false
required-features = ["xz"]

[package.metadata.cargo-feature-combinations]
denylist = [
  # bzip2 feature transitivity
  "bz2_libbz2-rs-sys",
  "bz2_static",

  # lzma feature transitivity
  "lzma_tokio",

  # flate2 feature transitivity
  "gz_zlib",
  "gz_zlib-ng",
  "gz_zlib-ng-compat",
  "gz_cloudflare_zlib",
  "gz_rust_backend",

  # xz feature transitivity
  "xz_tokio",

  # xz is an alias to lzma
  "xz",

  # optional dependencies
  "bzip2",
  "flate2",
  "liblzma",
  "bgzip",

  # skip default
  "default",
]
