[package]
name = "niffler"
version = "3.0.0"
authors = ["Pierre Marijon <pierre@marijon.fr>", "Luiz Irber <luiz.irber@gmail.com>"]
description = "Simple and transparent support for compressed files"
license = "MIT/Apache-2.0"
repository = "https://github.com/luizirber/niffler"
homepage = "https://github.com/luizirber/niffler"
readme = "README.md"
documentation = "https://docs.rs/niffler"
edition = "2021"
rust-version = "1.74"

[features]
default = [
    "bgz", "bgzip/default",
    "bz2", "bzip2/default",
    "gz", "flate2/default",
    "lzma", "liblzma/default",
    "zstd", "zstd/default"
]
bz2 = ["dep:bzip2"]
lzma = ["dep:liblzma"]
gz = ["dep:flate2"]
bgz = ["dep:bgzip"]
zstd = ["dep:zstd"]

wasm = [
    "zstd",
    "lzma", "liblzma/default",
    "gz", "flate2/rust_backend",
    "bgz", "bgzip/rust_backend",
    "bz2", "bzip2/libbz2-rs-sys",
]

[dependencies]
cfg-if = "1.0"
thiserror = "2.0"
bzip2 = { version = "0.5.0", optional = true, default-features = false }
flate2 = { version = "1.0", optional = true, default-features = false }
liblzma = { version = "0.3", optional = true, default-features = false }
bgzip = { version = "0.3", optional = true, default-features = false }
zstd = { version = "0.13", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3"
codspeed-criterion-compat = "2.7.2"

[[bench]]
name = "detect_format"
harness = false

[[bench]]
name = "gzip"
harness = false
required-features = ["gz"]

[[bench]]
name = "bzip2"
harness = false
required-features = ["bz2"]

[[bench]]
name = "lzma"
harness = false
required-features = ["lzma"]

[package.metadata.cargo-feature-combinations]
denylist = [
  # skip default and wasm
  "default",
  "wasm",
]
